# skale-gas-miner

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cryptopia.SkaleGasMiner.sln  Cryptopia.SkaleGasMiner.vcxproj  Cryptopia.SkaleGasMiner.vcxproj.filters  README.md  dllmain.cpp  framework.h  miner.cpp  miner.h
helpers/: convert.cpp  convert.h  hashing.cpp  hashing.h
lib/cryptopp/: cryptlib.vcxproj  cryptlib.vcxproj.filters
